--- a/app/views/08/courses.html
+++ b/app/views/08/courses.html
@@ -95,7 +95,8 @@
                   { value: "level-4", label: "Level 4 (like high national certificate)" },
                   { value: "level-5", label: "Level 5 (like diplomas)" },
                   { value: "level-6", label: "Level 6 (like degree)" },
-                  { value: "level-7", label: "Level 7 (like masters degree)" }
+                  { value: "level-7", label: "Level 7 (like masters degree)" },
+                  { value: "level-8", label: "Level 8 (like a PhD)" }
                 ] %}
                 {% for level in allLevels %}
                   <div class="govuk-checkboxes__item">
