--- a/app/views/08/layouts/_BASE.html
+++ b/app/views/08/layouts/_BASE.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
+
+
 {% set serviceName = "Explore your options after school or college" %}
 {% set govukRebrand = true %}
 {% extends "/layouts/main.html" %}
