Updated filter styling

--- a/app/assets/sass/components/_filters-2.scss
+++ b/app/assets/sass/components/_filters-2.scss
@@ -1,9 +1,6 @@
-.filter-container {
-  border: 1px solid #b1b4b6;
-}
 
 .filter-search-terms {
-  background-color: #b1b4b6;
+  background-color: #f3f2f1;
   padding-bottom: 1px;
   padding-left: 10px;
 }
@@ -13,7 +10,7 @@
 }
 
 .filter-heading {
-  background-color: #b1b4b6;;
+  background-color: #f3f2f1;
   padding-top: 20px;
 }
 
