--- a/app/assets/sass/components/_filters.scss
+++ b/app/assets/sass/components/_filters.scss
@@ -1,7 +1,8 @@
 // Filter compoenent styles:
 
 .filter-container {
-    border: 1px solid #B1B4B6;
+    border: 1px solid #b1b4b6;
+    padding-right: 1px;
     width: 100%; /* Full width */
   }
   
@@ -94,7 +95,7 @@
     padding-bottom: 1px;
     padding-left: 4px;
     padding-right: 4px;
-    border: 1px solid #888888; /* Adjust the border color to match the screenshot */
+    border: 1px solid #b1b4b6; /* Adjust the border color to match the screenshot */
     border-radius: 4px;
     background-color: #ffffff; /* Adjust the background color if necessary */
     font-size: 16px; /* Adjust font size */
