--- a/app/views/08/cookies.html
+++ b/app/views/08/cookies.html
@@ -17,7 +17,7 @@
         </div>
       </div>
 
-      <h1 class="govuk-heading-l">Cookies on the Skills for Careers website</h1>
+      <h1 class="govuk-heading-l">Cookies on the Find education and training website</h1>
 
       <p class="govuk-body">
         Cookies are files saved on your phone, tablet or computer when you visit a website.
